@@ -1,5 +1,10 @@
 2019-10-28  Richard Biener  <rguenther@suse.de>
 
+	PR tree-optimization/92252
+	* gcc.dg/torture/pr92252.c: New testcase.
+
+2019-10-28  Richard Biener  <rguenther@suse.de>
+
 	PR tree-optimization/92241
 	* gcc.dg/torture/pr92241.c: New testcase.
 
